Fixed the overlap issue with the bookmarks toolbar active

--- a/userChrome.css
+++ b/userChrome.css
@@ -101,7 +101,7 @@ not (-moz-bool-pref: "zen.view.use-single-toolbar") {
       }
 
       /*Elements with smooth transitions that are animated*/
-      #navigator-toolbox, #tabbrowser-tabbox, tab:is([zen-essential]),
+      #navigator-toolbox, #PersonalToolbar, #tabbrowser-tabbox, tab:is([zen-essential]),
       zen-folder .tab-group-container, #tabbrowser-tabpanels{
         transition: clip-path var(--transition-duration) ease-in-out var(--transition-delay-smooth),
         transform var(--transition-duration) ease-in-out var(--transition-delay-smooth),
@@ -155,10 +155,10 @@ not (-moz-bool-pref: "zen.view.use-single-toolbar") {
         ~ #zen-appcontent-wrapper {
           z-index: 0 !important;
         }
-        &:not([zen-right-side="true"]) ~ #zen-appcontent-wrapper #tabbrowser-tabbox {
+        &:not([zen-right-side="true"]) ~ #zen-appcontent-wrapper #tabbrowser-tabbox, &:not([zen-right-side="true"]) ~ #zen-appcontent-wrapper #PersonalToolbar:not([collapsed=""]) {
           clip-path: inset(-2px -2px -2px calc(var(--expanded-tab-bar-width) - var(--collapsed-tab-bar-width) - 5px) round 10px);
         }
-        &[zen-right-side="true"] ~ #zen-appcontent-wrapper #tabbrowser-tabbox {
+        &[zen-right-side="true"] ~ #zen-appcontent-wrapper #tabbrowser-tabbox, &[zen-right-side="true"] ~ #zen-appcontent-wrapper #PersonalToolbar:not([collapsed=""]) {
           clip-path: inset(-2px calc(var(--expanded-tab-bar-width) - var(--collapsed-tab-bar-width) - 5px) -2px -2px round 10px);
         }
         &[zen-right-side="true"] ~ #zen-appcontent-wrapper #tabbrowser-tabbox[zen-split-view="true"] #tabbrowser-tabpanels {
@@ -275,7 +275,10 @@ not (-moz-bool-pref: "zen.view.use-single-toolbar") {
       }
 
       /*initial clip path state*/
-      #tabbrowser-tabbox {
+      #tabbrowser-tabbox{
+      clip-path: inset(-2px -2px -2px -2px round 5px);
+      }
+      #PersonalToolbar{
       clip-path: inset(-2px -2px -2px -2px round 5px);
       }
 
